# qdldl_benchmarks

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI.yml
Testing/: TAG
examples/: Manifest.toml  gendata.jl
src/: CMakeLists.txt  csc.c  csc.h  kkt.c  kkt.h  lqrdata.jl  pardiso_solver.c  pardiso_solver.h  qdldl_solver.c  qdldl_solver.h  solve_pardiso.c  solve_qdldl.c  utils.c  utils.h
test/: 2-1-32_banded.json  CMakeLists.txt  cs2rs.jl  csc_test.c  minunit.h  pardiso_test.c  qdldl_test.c  test_utils.c  test_utils.h
